# Rocio-IA-Nutricion

./: .gitignore  README.md
backend/: .env  .gitignore  API_ENDPOINTS.md  DIALOGFLOW_SETUP.md  dialogflow_integration.py  main.py  pyproject.toml
backend/examples/: README.md  chat_interactive.py  test_chat.py
backend/food_api/: food_api.py
backend/prolog/: IMPLEMENTACION_RESUMEN.md  README_DYNAMIC_FOODS.md  comidas.pl  comidas_dynamic.pl  comidas_rules.pl  food_cache.json  food_loader.py  prolog_engine.py
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: index.ts
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  VoiceButton.tsx
frontend/src/components/recommendations/: FoodDetailModal.tsx  Recommendations.tsx
frontend/src/components/sensors/: SensorChart.tsx  SensorPanel.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: index.ts  useChat.ts  useSensors.ts  useVoice.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
